group = "orbada"
version = "2.0.2"


allprojects {
    apply plugin: 'java-library'
    compileJava.options.encoding = 'ISO-8859-1'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            url uri("${rootProject.projectDir}/libs/maven")
        }

    }
    dependencies {

        // external dependencies
        implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
        implementation group: 'org.dom4j', name: 'dom4j', version: '2.1.4'
        implementation group: 'com.github.librepdf', name: 'openpdf', version: '2.0.3'
        implementation group: 'com.github.albfernandez', name: 'javadbf', version: '1.14.1'
//        compile group: 'org.jmeld', name: 'jmeld', version: '2.1'
        implementation group: 'org.firebirdsql.jdbc', name: 'jaybird', version: '5.0.12.java11'
        implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.1'
        implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.23.1'
        implementation group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: '2.23.1'
        implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.13'
        implementation group: 'net.sf.nimrod', name: 'nimrod-laf', version: '1.2'
        implementation group: 'org.apache.poi', name: 'poi', version: '5.3.0'
        implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.3.0'
        implementation group: 'net.sf.squirrel-sql.thirdparty-non-maven', name: 'tinylaf', version: '1.4.0'
        implementation group: 'com.jgoodies', name: 'looks', version: '2.1.4'

        implementation fileTree("${rootProject.projectDir}/libs/bin/")


        if(!project.name.equals("orbada-res")){
            // adding res module to all modules but not for itself
            api project(':orbada-res')
        }
    }
}

dependencies {
    api project(':drink-master')
    api project(':json')
    api project(':orbada-core')
    api project(':orbada-datatext')
    api project(':orbada-db-objects')
    api project(':orbada-g2')
    api project(':orbada-id')
    api project(':orbada-parser')
    api project(':orbada-plugins')
    api project(':orbada-prop')
    api project(':orbada-reports-db')
    api project(':orbada-sky')
    api project(':orbada-task')
    api project(':orbada-userdb')
    api project(':orbada-util')
    api project(':orbada-waitdlg')
}

tasks.register('createDistribution') {
    onlyIf { jar.archiveFile.get().asFile.exists() }
    dependsOn(':startup:jar', jar, ':orbada-res:processResources', processResources)

    doLast {
        def packagedDependencies = configurations.findByName('runtimeClasspath') ?: configurations.findByName('compileClasspath')

        ant.copy(
            todir: sourceSets.main.output.resourcesDir,
            failonerror: false
        ) {
            fileset(dir: project(':orbada-res').sourceSets.main.output.resourcesDir) {
                exclude(name: '**/res/**')
            }
        }

        def starterJarTask = project(':startup').tasks.named('jar').get()
        def starterJarFile = starterJarTask.archiveFile.get().asFile
        def mainJarFile = jar.archiveFile.get().asFile
        def zipFile = mainJarFile.path.replace('.jar', '.zip')

        ant.mkdir(dir: starterJarFile.parentFile.absolutePath)
        ant.mkdir(dir: sourceSets.main.output.resourcesDir.absolutePath)
        ant.mkdir(dir: mainJarFile.parentFile.absolutePath)

        ant.zip(destfile: zipFile) {
            zipfileset(file: starterJarFile.absolutePath, fullpath: "${starterJarTask.archiveBaseName.get()}.jar")
            zipfileset(dir: sourceSets.main.output.resourcesDir.absolutePath)
            packagedDependencies.collect {
                zipfileset(file: it.absolutePath, fullpath: "lib/${it.name}")
            }
        }
        println('>>>> end')
    }
}

tasks.named('assemble') { finalizedBy 'createDistribution' }
tasks.named('build') { finalizedBy 'createDistribution' }

